# ChangeLog for sys-apps/hdparm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.237 2012/09/04 20:16:23 vapier Exp $

  04 Sep 2012; Mike Frysinger <vapier@gentoo.org> hdparm-9.39.ebuild:
  Install wiper contrib files #433147 by Gerhard Hintermayer.

  28 May 2012; Raúl Porcel <armin76@gentoo.org> hdparm-9.39.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #369569

  20 May 2012; Mark Loeser <halcy0n@gentoo.org> hdparm-9.39.ebuild:
  Stable for ppc/ppc64; bug #369569

  16 May 2012; Jeroen Roovers <jer@gentoo.org> hdparm-9.39.ebuild:
  Stable for HPPA (bug #369569).

  12 May 2012; Markus Meier <maekke@gentoo.org> hdparm-9.39.ebuild:
  arm stable, bug #369569

  09 May 2012; Jeff Horelick <jdhore@gentoo.org> hdparm-9.39.ebuild:
  marked x86 per bug 369569

  09 May 2012; Agostino Sarubbo <ago@gentoo.org> hdparm-9.39.ebuild:
  Stable for amd64, wrt bug #369569

  29 Apr 2012; Mike Frysinger <vapier@gentoo.org> files/hdparm-init-8:
  Also run on cdrom devices, and drop devfsd support #413705 by tokiclover.

  14 Apr 2012; Zac Medico <zmedico@gentoo.org> hdparm-9.39.ebuild:
  Add ~amd64-linux keyword.

*hdparm-9.39 (04 Feb 2012)

  04 Feb 2012; Tim Harder <radhermit@gentoo.org> +hdparm-9.39.ebuild:
  Version bump.

*hdparm-9.38 (17 Jan 2012)

  17 Jan 2012; Mike Frysinger <vapier@gentoo.org> +hdparm-9.38.ebuild:
  Version bump #399031 by teidakankan.

  29 Jul 2011; Zac Medico <zmedico@gentoo.org> hdparm-9.37.ebuild:
  Add ~x86-linux keyword.

  07 May 2011; Raúl Porcel <armin76@gentoo.org> hdparm-9.36.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #360799

  01 May 2011; Kacper Kowalik <xarthisius@gentoo.org> hdparm-9.36.ebuild:
  ppc64 stable wrt #360799

  21 Apr 2011; Thomas Kahle <tomka@gentoo.org> hdparm-9.36.ebuild:
  x86 stable per bug 360799

  14 Apr 2011; Brent Baude <ranger@gentoo.org> hdparm-9.36.ebuild:
  stable ppc, bug 360799
