@@ -8,27 +8,27 @@ DIST hdparm-9.36.tar.gz 121153 SHA256 88cdf28eae3af8d490f48427150c8ffb436cf2176f
 DIST hdparm-9.37.tar.gz 122062 SHA256 87ede0a7cb5b4de500748232e9d251b75acfccce078e1d42c8d125b9e5b4ccd3 SHA512 ec9c792df38c1bf9ddb884f4b43a59f97680b1304f4d1ba99439eb5c375361b549c4b952580a21b4cee9d77b8e4f560c8a2bc5cde59fa55ee41d87ee775ae7eb WHIRLPOOL bd527aca62eee7ea621d4d8eb867268184b688ff3445caaa857d73d96db909546c5d5fe064b006bb4c9b23524179677a265b4d29ce978e486ca04096a4219e3d
 DIST hdparm-9.38.tar.gz 131175 SHA256 04a96f01c44ae17f2428b3d98d867a4778de4b69be2ca84f2e7e3c31dfd37e56 SHA512 5a318cd0dc737cd62468bb72af388b96f7b4461d3ad41f5b6ea02ecc7fe2f8792802b4696cf65a1d7daf44c765408030b005d2b1d53162766507ff384edfe21b WHIRLPOOL 29d6af54b89a0e9cb74c87fc51931173425c39a6e1d1ecc261f2642712d3af10a2be84acb05b35c660d6d50fe4025ef1d5657b72f4b408d5eefae96648bb3acb
 DIST hdparm-9.39.tar.gz 126989 SHA256 72d550af4526aa96f0841c79321a0ee39d636cbaf1f294e52193e90c054b3cea SHA512 7332fb1c03faa9b916864640959d31a355d4c8daebdb97dc941375a2fb2499827546fd1f1cc1435b403da399e5f5a70a30e9384b4499bec8f45c9408ad074b3c WHIRLPOOL cb3ccbab588cf349a39f2df5844444bc0db51f8b3c75fa9068507382b46a92cc32dc3132e325820ea158182de5b65f46de2913bd58fd737a3242b33729d9c7df
-EBUILD hdparm-9.28.ebuild 987 SHA256 127548febc17c447ce4aa33886599e4e709dd79a4bcb4affaac837e61f0c3465 SHA512 59b729f811b21d86d9fc3ed608816ae80c6d46f661998e07703142f43c6c52eb59c39bf3927f0a0c1d1b83151fe731ac42612ae1d7736f548f88a87803c5be2a WHIRLPOOL 2c864fe1ccc1b2c02d3bcb3ae95ca410118bb3ba8b294d64c160639aaad1644c54c1b4706e4e43a9d193003e1964ce44786069db93ebd3fbd85dd6b6fdd21d50
-EBUILD hdparm-9.36.ebuild 987 SHA256 83d825b49d74165a4daf15f1abf50ea98588b51c2872d733f2353eef8c4e8431 SHA512 c5a8f654bcf0e3ff028bc9c689b91ecc8d402b0411935e60d8ce7c884391c422feb51a13223508383545a7209f75c0c53387b38d60383a49c8f08ae5cfff6536 WHIRLPOOL 600dc7b43d9f3b8f07cddf2282d3643401a8048bf707c90999e39043763281be3bebcbb028d857a24ed95bf253df6dcdfe8f6ea350f012e7647f3fc5ddc72417
-EBUILD hdparm-9.37.ebuild 1010 SHA256 7fd81b100478fbcf87234eeee11dd9b4dd70eb8635dbfa7a4c3575f5e1ea36b7 SHA512 d322b69a068522c8124e2acfeb1a375f757357f640c2f8b69e1ec169f7e1a4b107286136539858a607a6ee141656da005edcf0515acd407b9306dbb9a36d3c80 WHIRLPOOL 3de69a89e60686e12589a53668f4ee9175a136fcffeaa9c19d81b658b9b69f1e8bc0dbb194fe9b3f320162fed67fcb0e937a3c40cb0a4cb513fd280768b1fd74
-EBUILD hdparm-9.38.ebuild 1009 SHA256 4ff252f4703d7934c15fc3e784f050fbf0cddea0bbdd1da7e4e962faaae607b3 SHA512 ff291a835e2916715c88f8756cd4cd79ce4c2ca97ccc4c6744dfdcf5c323bff36e053eff49b6df822bf53f0f318b690e620442e325e2c3eea40635d30198c9e9 WHIRLPOOL 3ae638375b467f4c3669e12721b13b8115821a9c884d6534a11f7f296f698b7be05ae1dba72c8583aeb2a0d13217bc57325b54f406013dd2c7d67c08ee5a7f7a
-EBUILD hdparm-9.39.ebuild 1008 SHA256 2dd8c0af555eb71f1dfcb95242869fbae1c1f8a6ccbfeea9f1ddc4d15ee86188 SHA512 c83e3c031eb3bf29d450c92d301dc20fc7a24c68a2d900bc7d333fe59f91165d946140f781243bbab2d821e6a8dab4c9c05436695aa1c5117c059e480463a4fc WHIRLPOOL 63c903d54e10a3072e6bad0346c6e88621beafd55ab94312c5215ec599175710df2f14a6dfb9917f501fb91bebd040c9d7c0302f551865332f035a5197489ed7
-MISC ChangeLog 27491 SHA256 788b99cb6018c766289d38166ee67b8105ca5742513295ae8b99369b631330da SHA512 e8bbfabf24ff9c88264b394bd2cbdbded513cfaaed6e2e6308d3b3030092e0fcf29feb76048769b2b0ec3bb0f73f2707fb6d6d6f11861fc8797d67daec8615fc WHIRLPOOL a8c756eee3314024a22e439059592810d60e26dc27ba4eba16d53d26aab746d0067c83d46869ab9ff71be5c41ee317f1952eaf1d02486c8281325cd6a097f8aa
+EBUILD hdparm-9.28.ebuild 1000 SHA256 56841e7ae6279514d988fd36e8c4befedc494ad77620d92c95c074a8d2fa2131 SHA512 f64cee548314ea65bbea057cf742718ca9543f7f21fed7c3f6a8df5da2a23208916d373d9f2b3dcd71ca20bd786e756025222193a6688b8ba79b6946381ba0d0 WHIRLPOOL 87c7a9dbc300c66d4e976c180e4a6476fa2a1baca2f90ff855c087bac396367323b67dc3216ac1034f187637b9d766ab9d5f783760089c440899f4a30a015821
+EBUILD hdparm-9.36.ebuild 1000 SHA256 c009ca6bd86584c666453efa338b524e855cc2f15920484ec205d08afef67abd SHA512 2333377f9a578bd12fd50476f9fb4c30999b7dd0bb6e5ec6784db81f593dd98adff299d9f4b627b1ba3035d4c5124da29947b525e7944cbe5e8b75b7e9bce432 WHIRLPOOL c08bd6bc1c7229a689e3061b7a1f7f5fcad4b1fb78c8e27cdf232d56a32429c40b35a558ff2351dc739e11219ddf4d01faf692e7e81724687cb4a04d0d58fd24
+EBUILD hdparm-9.37.ebuild 1023 SHA256 e25f0395091697662797cc85a93fdb6061cd849c42fec15feb964589dffe377a SHA512 945e578100afc5c3de0c5a99368d26d09c190fba5b83fae59f9720c770460ee518c0d962ec8375ec24733182cfe6a257eecce5dc9f97dab4532bd637a20542d2 WHIRLPOOL 562f02e339e70d71ad9ee97c8562caa30963b7bf550e605582600d59babebfa2e578aacfee88e997c134a2f26fcc68a6955eab7ed1be01a90048fef92fd93c7e
+EBUILD hdparm-9.38.ebuild 1023 SHA256 33f4544f99b27e518bc2cf8bbe96d61a345b287b8e804d6e7c15a8a3084e2656 SHA512 a44b95a89ba7b6d3fa4a606c822425eb6661b65971186f3289c7210b1453c7611b1391c386ef38147e125693017b49049636381bd031c4454de8e656a8a80c66 WHIRLPOOL 45e72c2f2ce3a84566c605a614daa3ad7c79f036624a353669b22feb85f20e66f3c6e7db8a2eb8e63eba0da48c514d04f08cb967e86d8fdef17141542335031c
+EBUILD hdparm-9.39.ebuild 1023 SHA256 fdf2b6979126f7af92653a9decb0c9d3ca873e8ca6e77dfc8eb5af741953c267 SHA512 4e1ffd038a3079fd3c4c6c4c58451fef9bd2724761bddeea5190aa9768fa53e6fc803ea47975a171515fdd627929dbdbeb55c2b55727ead6b98e072e871f7fb0 WHIRLPOOL 4e4b71085d3d4688b16b3eba4722a84a767a2d4f27e05dfff4fe81c209219527a9e67440f147c22d18134d6175981d542a3cedb058b08f0b6509ac4a3fbb6ebc
+MISC ChangeLog 27748 SHA256 2aa1948b0833e4a4bd4a38e2aa962a41d358f1bb63ccf82c3d9e3b47303884d1 SHA512 a1fb4c7c11149f66e3201988b6125c792efc625639ca602770f9201e818a862ded843f8070bd17e217ab7e8d25093203157c449c98162f3fb18aaf365548ec41 WHIRLPOOL 5445cda4ecf1be79908bb007c30c0cdc227e7945a4770b902e630f545780d24557e3a454451e65643097d6442b9cb351954e125bd12e01adca3e632f59746e3f
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQRmHzAAoJELEHsLL7fEFW9UUP/1Nzlq37oiSKAWz/l9qPvoTC
-M6j73mGkRMGw1q8I36BYY5z8+Ps1RFJYtNU4YzvKGAGGw5F3aZZYLJSjqDmvXESm
-Zcm0UBMSUcTUt8Hb+DWecfoOMT3ir0cRhXO4ditFLdem6r4tAeRFAbOT7J9SgHLZ
-yJ+0PysMJD5K9bhh74BmVwveTQVrlwxZCF58srhjlz8qd7YwbF7VVR35zGT+GyIf
-EUzbT5f9jzJXpS5AODJsrE9r+uqHLn3LomHeqfYXIQaMJsBLx3iIVWwyWIEGSqTC
-yzW+QB5IcWJEBfaM9mgpOBKyRCYu/L9U0EMOk8gMFGJteDr0aukSOO9HKBA5R7xt
-JOB/aTyl05CYX7iDhfEyrzm7o/e5psQjRPj2zZ6QC/K9Kx8ffNYOgZbVyvWBpJdS
-j51PZli/dayXns7AtZilYaLXt9ffEwqMA/bq85oj+tZoQqoWHFUdtI3mR9O+rDsg
-cZ0+2pt36od5O4e951/PkoIh+hge8RnK6S20dChpDPkKYVloYZBRXeuIqNvj0KwV
-k85rtjIz5TK+xW21C41vvdLredAz4IaU1zm7ocWMTWsYcgvWP7XsFcKRrXOuEA7c
-rF1DmqRI5eStkEGAoNN7j3hZtjbdvEvv02PP4kovImnQd1oMl9aATDIBmlnzeorJ
-Q24ZYZiRR4RftM1ve9VD
-=Dlz4
+iQIcBAEBCAAGBQJQZshOAAoJEDxpGckxwJCBwOAQAKbmpbAXB9J+mKQZLbMrYo80
+P/vY4eZ3Wbzo7wRjTJMrPgE5dHntzXpbIdfu1w9mWqIR9M1EFTi5yupCdjDfg0rM
+s/T0XXFqdKX+ErrC2KGwbyQ9Kst/JUCkPcpAEAkryTAGyRpvzdCVB7S37QXPamY/
+JyaT0tQN2IUMuRPRgQ+dZM2HiJxbwqH731h7mtA+dcyH+RNL+Rw3ZXKOrX7QtToZ
+nlhfbPn0FPWYy47tRx1gfISg1s8ILD+nEMqJ+P1gJedQuBUH7a0HjN/PjnmZ7li6
+/yNAz0v4dmwL6EVhGIGosuq3VCaSARUxgJ12025CH5wd4BBzgv0Mw7lBvhp8wple
+nv4EFtZzNdc0/a/AkrtkXYC+Dqf672O0RUJF4nz6liFlnWIKI1FE21Pm/4OrTq0x
+IFCvWy1ilBZ5uXJY4D8JnA+lmgNm409oafO7i+/gWBm7y0Bq1Uz5qw6cOdcITFXJ
+PuQgnr9jPsJOh0eg4VqS0YVvUrxiw5vzhB36qnVN++N5VyDhQM6142xTmBPS8ee5
+6SyYwh56c8ZJPBONYWMCQbToeENYhrxUg/WQTFGGG2UxEXONeV/KvlRmMJUxbx8h
+YrfVMv6abuMtbz6aooEzk0gi0OWQouNLKaPulOnOIpu5IRURUNcYia3cMYB4Mh1v
+msLG62vUpo5PIRiqigiA
+=mCcu
 -----END PGP SIGNATURE-----
