@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/hdparm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.237 2012/09/04 20:16:23 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.238 2012/09/29 09:58:03 ulm Exp $
+
+  29 Sep 2012; Ulrich Müller <ulm@gentoo.org> hdparm-9.28.ebuild,
+  hdparm-9.36.ebuild, hdparm-9.37.ebuild, hdparm-9.38.ebuild,
+  hdparm-9.39.ebuild:
+  Specify LICENSE more precisely. The package is BSD licensed, the "wiper"
+  subdirectory under GPL-2 only.
 
   04 Sep 2012; Mike Frysinger <vapier@gentoo.org> hdparm-9.39.ebuild:
   Install wiper contrib files #433147 by Gerhard Hintermayer.
